@@ -4,9 +4,11 @@ SOURCES = World.hs
 PACKAGES = gtk
 
 $(PROG) : $(SOURCES)
-	ghc --make $< -o $@ $(HCFLAGS) $(HCEXTRAFLAGS)
+	$(HC) --make $< -o $@ $(HCFLAGS) $(HCEXTRAFLAGS)
 
 HCEXTRAFLAGS = $(if $(HCNEEDSPACKAGE), $(addprefix -package ,$(PACKAGES)))
 
 clean:
 	rm -f $(SOURCES:.hs=.hi) $(SOURCES:.hs=.o) $(PROG)
+
+HC=ghc
